src/test/deca/syntax/invalid/sansobjet/IntDivide.deca
// 
// description: test division incorrecte
// resultat: erreur ligne 5: pas de deuxieme terme
{
    int i = 1-;
}
